--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -56,12 +56,11 @@ jobs:
       - name: Deploy
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.REACT_APP_HOST_NAME }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
           aws s3 cp \
           --recursive \
-          --region ap-northeast-2 \
+          --region ${{ secrets.AWS_REGION }} \
           build s3://weshareus
 
       - name: Invalidate CloudFront Cache
