--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,6 +11,7 @@
     "plugin:prettier/recommended"
   ],
   "rules": {
+    "no-param-reassign": "off",
     "no-unused-vars": "off",
     "react/destructuring-assignment": "off",
     "@typescript-eslint/no-explicit-any": "off",
