--- a/package.json
+++ b/package.json
@@ -92,9 +92,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-storybook": "^0.6.10",
+    "msw": "^0.49.2",
+    "msw-storybook-addon": "^1.7.0",
     "prettier": "^2.8.3",
     "prop-type": "^0.0.1",
     "prop-types": "^15.8.1",
     "webpack": "^5.75.0"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
