--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "prettier": "^2.8.3",
     "prop-type": "^0.0.1",
     "prop-types": "^15.8.1",
+    "storybook-addon-react-router-v6": "^0.2.1",
     "webpack": "^5.75.0"
   },
   "msw": {
