--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-storybook": "^0.6.10",
+    "mockdate": "^3.0.5",
     "msw": "^0.49.2",
     "msw-storybook-addon": "^1.7.0",
     "prettier": "^2.8.3",
